--- a/front/src/App.css
+++ b/front/src/App.css
@@ -188,7 +188,6 @@ footer {
 }
 
 form {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   width: 33%;
@@ -228,4 +227,28 @@ padding: 5px;
 
 form button {
   background-color: #02182b;
+}
+
+form .skills li {
+  margin: 4px 0;
+  display: flex;
+  justify-content: space-around;
+  border: #f76c6c 1px solid;
+  border-radius: 4px;
+  padding: 2px;
+}
+
+form .skills .votes {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  border-radius: 9999px;
+  height: 20px;
+  width: 20px;
+}
+
+.adding {
+  border-top: 2px solid #f76c6c;
 }
