--- a/front/wild-book/src/App.css
+++ b/front/wild-book/src/App.css
@@ -214,6 +214,19 @@ form h1 {
   font-weight: 500;
 }
 
+.customedButton2 {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  background-color: #f76c6c;
+  padding: 5px;
+  border: 1px solid #c9c9c9;
+  border-radius: 50%;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  color: white;
+  font-weight: 500;
+}
+
 button:hover {
   cursor: pointer;
 }
